@@ -1,15 +1,18 @@
 /*******************************************************************************
- * Copyright (c) 2021 IBM Corporation and others.
+ * Copyright (c) 2021, 2026 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * http://www.eclipse.org/legal/epl-2.0/
  *
- * Contributors:
- *     IBM Corporation - initial API and implementation
+ * SPDX-License-Identifier: EPL-2.0
  *******************************************************************************/
 package com.ibm.ws.request.timing.hung.fat;
 
+import static componenttest.annotation.SkipForRepeat.EE10_FEATURES;
+import static componenttest.annotation.SkipForRepeat.EE11_FEATURES;
+import static componenttest.annotation.SkipForRepeat.EE8_FEATURES;
+import static componenttest.annotation.SkipForRepeat.EE9_FEATURES;
 import static org.junit.Assert.assertTrue;
 
 import java.io.BufferedReader;
@@ -31,10 +34,10 @@ import org.junit.runner.RunWith;
 import com.ibm.websphere.simplicity.ShrinkHelper;
 
 import componenttest.annotation.Server;
+import componenttest.annotation.SkipForRepeat;
 import componenttest.custom.junit.runner.FATRunner;
 import componenttest.custom.junit.runner.Mode;
 import componenttest.custom.junit.runner.Mode.TestMode;
-import componenttest.topology.impl.JavaInfo;
 import componenttest.topology.impl.LibertyServer;
 
 /**
@@ -53,13 +56,7 @@ public class HungRequestEnableThreadDumps {
 
     @BeforeClass
     public static void setUp() throws Exception {
-        JavaInfo java = JavaInfo.forCurrentVM();
         ShrinkHelper.defaultDropinApp(server, "TestWebApp", "com.ibm.testwebapp");
-        int javaVersion = java.majorVersion();
-        if (javaVersion != 8) {
-            CommonTasks.writeLogMsg(Level.INFO, " Java version = " + javaVersion + " - It is higher than 8, adding --add-exports...");
-            server.copyFileToLibertyServerRoot("add-exports/jvm.options");
-        }
         CommonTasks.writeLogMsg(Level.INFO, " Starting server...");
         server.startServer();
     }
@@ -87,6 +84,7 @@ public class HungRequestEnableThreadDumps {
      * Tests when the boolean "enableThreadDumps" attribute is not specified, the thread dumps should be created when the hung request is detected.
      */
     @Test
+    @SkipForRepeat({ EE8_FEATURES, EE9_FEATURES, EE10_FEATURES, EE11_FEATURES })
     public void testEnableThreadDumpsNotSpecified() throws Exception {
         CommonTasks.writeLogMsg(Level.INFO, "***** Begining testEnableThreadDumpsNotSpecified! *****");
 
@@ -97,7 +95,7 @@ public class HungRequestEnableThreadDumps {
         createHungRequest(5000);
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Verifying if the hung detection warnings appeared...");
-        verifyHungRequestWarnings();
+        verifyHungRequestWarnings(5000);
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Checking if any thread dumps are created...");
         checkThreadDumpsCreated(true); // thread dumps are expected.
@@ -119,7 +117,7 @@ public class HungRequestEnableThreadDumps {
         createHungRequest(5000);
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Verifying if the hung detection warnings appeared...");
-        verifyHungRequestWarnings();
+        verifyHungRequestWarnings(5000);
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Checking if any thread dumps are created...");
         checkThreadDumpsCreated(false); // thread dumps are NOT expected.
@@ -132,6 +130,7 @@ public class HungRequestEnableThreadDumps {
      */
     @Test
     @Mode(TestMode.FULL)
+    @SkipForRepeat({ EE8_FEATURES, EE9_FEATURES, EE10_FEATURES, EE11_FEATURES })
     public void testDynamicThreadDumpsDisable() throws Exception {
         CommonTasks.writeLogMsg(Level.INFO, "***** Begining testDynamicThreadDumpsDisable! *****");
 
@@ -142,7 +141,7 @@ public class HungRequestEnableThreadDumps {
         createHungRequest(180000); // We must wait this long to see 3 java cores are generated (we expect only 3)
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Verifying if the hung detection warnings appeared...");
-        verifyHungRequestWarnings();
+        verifyHungRequestWarnings(180000);
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Checking if any thread dumps are created...");
         checkThreadDumpsCreated(true); // thread dumps are expected.
@@ -182,7 +181,7 @@ public class HungRequestEnableThreadDumps {
         createHungRequest(180000); // We must wait this long to see 3 java cores are generated (we expect only 3)
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Verifying if the hung detection warnings appeared...");
-        verifyHungRequestWarnings();
+        verifyHungRequestWarnings(180000);
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Checking if any thread dumps are created...");
         checkThreadDumpsCreated(false); // thread dumps are NOT expected.
@@ -212,6 +211,7 @@ public class HungRequestEnableThreadDumps {
      * The sub-element configuration should override the root element configuration, hence when a hung request is detected, thread dumps will be created.
      */
     @Test
+    @SkipForRepeat({ EE8_FEATURES, EE9_FEATURES, EE10_FEATURES, EE11_FEATURES })
     public void testGlobalThreadDumpsDisableLocalThreadDumpsEnable() throws Exception {
         CommonTasks.writeLogMsg(Level.INFO, "***** Begining testGlobalThreadDumpsDisableLocalThreadDumpsEnable! *****");
 
@@ -222,7 +222,7 @@ public class HungRequestEnableThreadDumps {
         createHungRequest(5000);
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Verifying if the hung detection warnings appeared...");
-        verifyHungRequestWarnings();
+        verifyHungRequestWarnings(5000);
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Checking if any thread dumps are created...");
         checkThreadDumpsCreated(true); // thread dumps are expected.
@@ -245,7 +245,7 @@ public class HungRequestEnableThreadDumps {
         createHungRequest(5000);
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Verifying if the hung detection warnings appeared...");
-        verifyHungRequestWarnings();
+        verifyHungRequestWarnings(5000);
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Checking if any thread dumps are created...");
         checkThreadDumpsCreated(false); // thread dumps are NOT expected.
@@ -258,6 +258,7 @@ public class HungRequestEnableThreadDumps {
      * The default configuration will be used ("enableThreadDumps=true"), where thread dumps will be created.
      */
     @Test
+    @SkipForRepeat({ EE8_FEATURES, EE9_FEATURES, EE10_FEATURES, EE11_FEATURES })
     public void testInvalidEnableThreadDumpsAttributeValue() throws Exception {
         CommonTasks.writeLogMsg(Level.INFO, "***** Begining testInvalidEnableThreadDumpsAttributeValue! *****");
 
@@ -277,7 +278,7 @@ public class HungRequestEnableThreadDumps {
         createHungRequest(5000);
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Verifying if the hung detection warnings appeared...");
-        verifyHungRequestWarnings();
+        verifyHungRequestWarnings(5000);
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Checking if any thread dumps are created...");
         checkThreadDumpsCreated(true); // thread dumps are expected.
@@ -309,10 +310,20 @@ public class HungRequestEnableThreadDumps {
         }
     }
 
-    private void verifyHungRequestWarnings() throws Exception {
+    private void verifyHungRequestWarnings(int reqDuration) throws Exception {
         CommonTasks.writeLogMsg(Level.INFO, "------> Waiting for hung detection warning...");
         server.waitForStringInLog("TRAS0114W", 30000);
         int numOfhungRequestsWarnMsgs = fetchHungRequestWarningsCount("TRAS0114W");
+
+        // Retry the request again, since sometimes in the SOE builds, the feature update takes
+        // some time, and the request is created before the feature is properly updated,
+        // and the requestTiming warning does not get registered in time.
+        if (numOfhungRequestsWarnMsgs == 0) {
+            CommonTasks.writeLogMsg(Level.INFO, "$$$$ -----> Retry the request because no hung request warning found!");
+            createHungRequest(reqDuration);
+            server.waitForStringInLog("TRAS0114W", 30000);
+            numOfhungRequestsWarnMsgs = fetchHungRequestWarningsCount("TRAS0114W");
+        }
         assertTrue("No hung request warning message was found !", numOfhungRequestsWarnMsgs > 0);
 
         CommonTasks.writeLogMsg(Level.INFO, "------> Waiting for hung request complete message...");
